# std_error

./: CMakeLists.txt  vcpkg.json
include/std_error/: std_error.h
include/std_error_next/: std_error2.h
src/: CMakeLists.txt
src/std_error/: std_error.cpp
src/std_error_next/: std_error2.cpp
tests/: CMakeLists.txt
tests/std_error/: std_error.test.cpp
tests/std_error_next/: std_error2.test.cpp
